Use dynamic dispatching strategy to offer a fixed agent for all potential ITs